--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -2,91 +2,152 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="galeria.html">
-    <title lang="en">Contactonos</title>
+  <meta charset="UTF-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="estilos.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="galeria.html" />
+  <!-- titulo -->
+  <title lang="en">Contactanos</title>
 
-    <!--Style bootstraps-->
+  <!-- favicon -->
+  <link rel="icon" type="image/x-icon" href="img/logo.ico" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- favicon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!--Estilos bootstraps-->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- Estilos locales -->
+  <link rel="stylesheet" type="text/css" href="./css/Style.css" />
 </head>
 
 <body>
-
-
+  <main class="Fondo">
     <!-- barra navegacion -->
     <div class="conteiner-flex">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Actividades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-light bg-light navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html">
+            THE <span style="color: red;">POWER </span>OF LOVE
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./contactanos.html">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Galeria.html">Galeria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./actividades.html">Actividades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
 
-    <main>
+    <div id="contactanosFondo">
+      <div class="d-flex justify-content-center flex-wrap-reverse my-5">
+        <!--  Container of forms in contact us -->
+        <div id="contactUsForm" class="container">
+          <!--  titulo -->
+          <h2 class="text-center">Contáctanos!</h2>
 
-
-        <!-- formulario -->
-        <!-- <form> -->
-
-            <!-- <h2>Contáctanos</h2>
-
-            <div class="input-group input-group-lg">
-
-                <div class="card p-5">
-
-                    <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
-                        placeholder="nombre">
-                    <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm"
-                        placeholder="correo electronico">
-                    <textarea class="form-control" aria-label="With textarea" placeholder="mensaje"></textarea>
-                </div>
+          <!--  Form inputs-->
+          <form method="POST" target="/new-entry" class="form-group">
+            <!--  Name -->
+            <div class="text-left mt-2">
+              <label htmlFor="title">Nombre y apellido*</label>
+              <input name="Nombre" type="text" class="form-control" autofocus placeholder="Escribe tu nombre y apellido"
+                required />
             </div>
-        </form> -->
 
-        <!--   create a contact form-->
+            <!--  Email -->
+            <div class="text-left mt-2">
+              <label htmlFor="Email">E-mail*</label>
+              <input name="Email" type="email" class="form-control" autofocus placeholder="Escribe tu email" required />
+            </div>
 
+            <!--  Message -->
+            <div class="text-left mt-2">
+              <label htmlFor="Mensaje">Consulta | Mensaje</label>
+              <textarea name="Mensaje" class="form-control" rows="3" autofocus
+                placeholder="Pregúntanos algo!"></textarea>
+            </div>
 
-    </main>
+            <p class="text-secondary">
+              Todos los campos con (*) son obligatorios
+            </p>
+            <!-- botones -->
+            <div class="d-flex justify-content-end mt-2">
+              <!--  boton borrar  -->
+              <div>
+                <button class="btn btn-light ContactButton">Borrar</button>
+              </div>
+              <!--  boton enviar -->
+              <div>
+                <button class="btn btn-dark ContactButton ms-2">
+                  Enviar tu consulta
+                </button>
+              </div>
+            </div>
+          </form>
+          <!--  Form inputs-->
+        </div>
+        <!--  /Container of forms in contact us -->
+      </div>
+    </div>
+    <footer class="bg-dark text-light text-center">
+      <!-- logo -->
+      <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
 
+      <!-- texto  -->
+      <p>Seguinos en las redes!!</p>
+      <!-- iconos -->
+      <div class="d-flex justify-content-center">
+        <!-- instagram -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-    </script>
+        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-instagram fa-2x"></i>
+        </a>
+        <!-- facebook -->
+        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-facebook fa-2x"></i>
+        </a>
+        <!-- twitter -->
+        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-twitter fa-2x"></i>
+        </a>
+      </div>
+
+      <!-- disclaimer -->
+      <p class="m-0 pb-4">
+        Copyright (c) 2022 Power of love. Autor de este documento: Prati
+        Cecilia.- Rosario - Argentina
+      </p>
+    </footer>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
