--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,133 +1,157 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es-ES">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Cecilia Prati">
-    <meta name="tags" content="">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="Cecilia Prati" />
+  <meta name="tags" content="" />
 
-    <!-- favicon -->
+  <!-- favicon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon" />
 
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+  <!-- titulo -->
+  <title>The Power of Love</title>
 
-    <!-- title -->
+  <!-- favicon -->
+  <link rel="icon" type="image/x-icon" href="img/logo.ico">
 
-    <title>The Power of Love</title>
+  <!-- Normalize -->
+  <link rel="stylesheet" href="css/normalize.css" />
 
-    <!-- Normalize -->
-    <!--     <link rel="stylesheet" href="css/normalize.css"> -->
+  <!--Estilos bootstraps-->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- Estilos locales -->
+  <link rel="stylesheet" type="text/css" href="./css/Style.css" />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
 
-    <!--Style bootstraps-->
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-
-    <!-- custon style -->
-    <!-- <link rel="stylesheet" href="css/custom.css"> -->
+  <!-- custon style -->
+  <link rel="stylesheet" href="css/Style.css" />
 </head>
 
 <body>
-    <div class="conteiner-flex">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Actividades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-
-    <div class="conteiner-fluid-custom">
-        <div class="intro1">
-            <h1>The <span style="color: red;">Power</span> of Love</h1>
+  <!-- barra navegacion -->
+  <div class="conteiner-flex">
+    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          THE <span style="color: red;">POWER </span>OF LOVE
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactanos.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Galeria.html">Galeria</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./actividades.html">Actividades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
+            </li>
+          </ul>
         </div>
-        <div id="intro2">
-            <p>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
-                en la
-                prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
-                <br><br>Más de 2000 m2, el mejor y más moderno equipamiento en fitness y musculación del
-                mercado, además de
-                amplios salones aeróbicos, actividades recreativas infantiles, piscina climatizada y áreas
-                de relax.
-            </p>
+      </div>
+    </nav>
+  </div>
 
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/portada_3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/portada_2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+  <!-- imagen principal -->
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/portada_3.jpg" class="d-block tamañoBanner" alt="banner ejersicio">
+            <div class="carousel-caption d-none d-md-block">
+                <h1>The <span style="color: red;">Power</span> of Love</h1>
+                <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
+                    en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
+                </h3>
+            </div>
+        </div>
+        <div class="carousel-item ">
+            <img src="img/portada_2.jpg" class="d-block tamañoBanner" alt="banner ejersicio mujer">
+            <div class="carousel-caption d-none d-md-block">
+                <h1>The <span style="color: red;">Power</span> of Love</h1>
+                <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
+                    en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
+                </h3>
+            </div>
+        </div>
 
-
-
-                <div class="d-flex justify-content-center">
-                    <!-- texto -->
-                    <div >
-                        <h3>Más que un gimnasio</h3>
-
-                        <p class="w-25 text">
-                            Con más de 25 años de experiencia en el mercado, creamos un servicio en
-                            constante
-                            crecimiento y evolución
-                            atendiendo a las diferentes necesidades de nuestros socios y en contacto con las
-                            tendencias
-                            mundiales en entrenamiento.
-                        </p>
-                    </div>
-
-                    <!-- imagen -->
-                    <div class="div1"><img class="foto1" src="img/nosotros.jpg" alt="nosotros">
-
-                    </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 
 
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-                        crossorigin="anonymous">
-                    </script>
+
+  
+
+    <footer class=" bg-dark text-light text-center">
+      <!-- logo -->
+      <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
+
+      <!-- texto  -->
+      <p>Seguinos en las redes!!</p>
+      <!-- iconos -->
+      <div class="d-flex justify-content-center">
+        <!-- instagram -->
+
+        <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-instagram fa-2x"></i>
+        </a>
+        <!-- facebook -->
+        <a href="#" target="_blank"
+          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-facebook fa-2x"></i>
+        </a>
+        <!-- twitter -->
+        <a href="#" target="_blank"
+          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
+          <i class="fa fa-twitter fa-2x"></i>
+        </a>
+      </div>
+
+      <!-- disclaimer -->
+      <p class="m-0 pb-4">
+        Copyright (c) 2022 Power of love. Autor de este documento: Prati
+        Cecilia.- Rosario - Argentina
+      </p>
+      </footer>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </html>
