fixed flew wrap for mobile

--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -70,23 +70,29 @@
             </nav>
         </div>
 
-        <div class="d-flex justify-content-center py-4">
-            <div>
-                <img src="img/galeria_1.jpg" class="img-fluid" alt="imagen" width="400">
+
+
+        <div class="py-2">
+
+            <div class="d-flex flex-wrap justify-content-center ">
+                <div>
+                    <img src="img/galeria_1.jpg" class="img-fluid m-1" alt="imagen" width="350">
+                </div>
+                <div>
+                    <img src="img/galeria_2.jpg" class="img-fluid m-1 " alt="imagen" width="350">
+                </div>
             </div>
-            <div>
-                <img src="img/galeria_2.jpg" class="img-fluid ms-4" alt="imagen" width="400">
+
+            <div class="d-flex flex-wrap justify-content-center ">
+                <div>
+                    <img src="img/galeria_3.jpg" class="img-fluid m-1" alt="imagen" width="350">
+                </div>
+                <div>
+                    <img src="img/galeria_4.jpg" class="img-fluid m-1 " alt="imagen" width="350">
+                </div>
             </div>
         </div>
 
-        <div class="d-flex justify-content-center py-4">
-            <div>
-                <img src="img/galeria_3.jpg" class="img-fluid" alt="imagen" width="400">
-            </div>
-            <div>
-                <img src="img/galeria_4.jpg" class="img-fluid ms-4" alt="imagen" width="400">
-            </div>
-        </div>
         <footer class=" bg-dark text-light text-center">
             <!-- logo -->
             <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
