cambios para diseño mas responsive

--- a/WEB/Quienes_somos.html
+++ b/WEB/Quienes_somos.html
@@ -73,13 +73,12 @@
 
     <div class="d-flex justify-content-center align-content-center flex-wrap p-5 Fondo">
         <!-- imagen -->
-        <div>
-            <img class="img-fluid" src="img/nosotros.jpg" style="max-width: 80%" alt="nosotros" />
+        <div class="d-flex justify-content-center">
+            <img class="img-fluid" src="img/nosotros.jpg" style="max-width: 95%" alt="nosotros" />
         </div>
         <!-- texto -->
-        <div class="text-start w-25"">
-      <h2 style=" color: red;">Más que un gimnasio</h2>
-
+        <div class="descripcionQuieneso text-center">
+            <h2 style=" color: red;">Más que un gimnasio</h2>
             <p>
                 Con más de 25 años de experiencia en el mercado, creamos un servicio en
                 constante crecimiento y evolución atendiendo a las diferentes
