--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -65,40 +65,40 @@
 
     <!-- contenedor -->
     <section class="py-5">
-      <div class="d-flex justify-content-center flex-wrap mt-2">
+      <div class="d-flex justify-content-center flex-wrap">
         <div>
           <!--Titulo -->
           <h2 class="text-white text-center">Spinning</h2>
           <!--  Imagen -->
-          <div class="px-4">
-            <img src="./img/spining.jpg" id="contactanos" alt="ejersicio" width="400" />
+          <div class="imageContainer">
+            <img src="./img/spining.jpg" class="img-fluid" id="contactanos" alt="ejersicio" width="350" />
           </div>
         </div>
         <div>
           <!--Titulo -->
           <h2 class="text-white text-center">Funcional</h2>
           <!--  Imagen -->
-          <div class="px-4">
-            <img src="./img/funcional.jpg" id="contactanos" alt="ejersicio" width="400" />
+          <div class="imageContainer">
+            <img src="./img/funcional.jpg" class="img-fluid" id="contactanos" alt="ejersicio" width="350" />
           </div>
         </div>
       </div>
 
-      <div class="d-flex justify-content-center flex-wrap mt-2">
+      <div class="d-flex justify-content-center flex-wrap">
         <div>
           <!--Titulo -->
           <h2 class="text-white text-center">Body Pump</h2>
           <!--  Imagen -->
-          <div class="px-4">
-            <img src="./img/body_pump.jpg" id="contactanos" alt="ejersicio" width="400" />
+          <div class="imageContainer">
+            <img src="./img/body_pump.jpg" class="img-fluid" " id=" contactanos" alt="ejersicio" width="350" />
           </div>
         </div>
         <div>
           <!--Titulo -->
           <h2 class="text-white text-center">Fit Combat</h2>
           <!--  Imagen -->
-          <div class="px-4">
-            <img src="./img/fit_combat.jpg" id="contactanos" alt="ejersicio" width="400" />
+          <div class="imageContainer">
+            <img src="./img/fit_combat.jpg" class=" img-fluid" id="contactanos" alt="ejersicio" width="350" />
           </div>
         </div>
       </div>
