--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -46,7 +46,7 @@
                 <a class="nav-link " aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contactanos.html">Contacto</a>
+                <a class="nav-link" hrehtml">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
@@ -71,7 +71,7 @@
           <h2 class="text-white text-center">Spinning</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/spining.jpg" class="img-fluid" id="contactanos" alt="ejersicio" width="350" />
+            <img src="./img/spining.jpg" class="img-fluid" alt="ejersicio" width="350" />
           </div>
         </div>
         <div>
@@ -79,7 +79,7 @@
           <h2 class="text-white text-center">Funcional</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/funcional.jpg" class="img-fluid" id="contactanos" alt="ejersicio" width="350" />
+            <img src="./img/funcional.jpg" class="img-fluid" alt="ejersicio" width="350" />
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
           <h2 class="text-white text-center">Body Pump</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/body_pump.jpg" class="img-fluid" " id=" contactanos" alt="ejersicio" width="350" />
+            <img src="./img/body_pump.jpg" class="img-fluid" "  alt="ejersicio" width="350" />
           </div>
         </div>
         <div>
@@ -98,7 +98,7 @@
           <h2 class="text-white text-center">Fit Combat</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/fit_combat.jpg" class=" img-fluid" id="contactanos" alt="ejersicio" width="350" />
+            <img src="./img/fit_combat.jpg" class=" img-fluid" alt="ejersicio" width="350" />
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
 
     <footer class="bg-dark text-light text-center">
       <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
+      <img src="./img/LOGO-GYM_BLANCO.png" alt="logo" style="max-width: 10em" />
 
       <!-- texto  -->
       <p>Seguinos en las redes!!</p>
