--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -116,7 +116,7 @@
     </div>
     <footer class="bg-dark text-light text-center">
       <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
+      <img src="./img/LOGO-GYM_BLANCO.png" alt="logo" style="max-width: 10em" />
 
       <!-- texto  -->
       <p>Seguinos en las redes!!</p>
