--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -53,7 +53,7 @@
                                 <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contactanos.html">Contacto</a>
+                                <a class="nav-link" hrefhtml">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="./Galeria.html">Galeria</a>
@@ -95,7 +95,7 @@
 
         <footer class=" bg-dark text-light text-center">
             <!-- logo -->
-            <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
+            <img src="./img/LOGO-GYM_BLANCO.png"  alt="logo" style="max-width: 10em" />
 
             <!-- texto  -->
             <p>Seguinos en las redes!!</p>
