--- a/WEB/index.html
+++ b/WEB/index.html
@@ -73,82 +73,81 @@
   <!-- imagen principal -->
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="img/portada_3.jpg" class="d-block tamañoBanner" alt="banner ejersicio">
-            <div class="carousel-caption d-none d-md-block">
-                <h1>The <span style="color: red;">Power</span> of Love</h1>
-                <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
-                    en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
-                </h3>
-            </div>
+      <div class="carousel-item active">
+        <img src="img/portada_3.jpg" class="d-block tamañoBanner" alt="banner ejersicio">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>The <span style="color: red;">Power</span> of Love</h1>
+          <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
+            en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
+          </h3>
         </div>
-        <div class="carousel-item ">
-            <img src="img/portada_2.jpg" class="d-block tamañoBanner" alt="banner ejersicio mujer">
-            <div class="carousel-caption d-none d-md-block">
-                <h1>The <span style="color: red;">Power</span> of Love</h1>
-                <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
-                    en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
-                </h3>
-            </div>
+      </div>
+      <div class="carousel-item ">
+        <img src="img/portada_2.jpg" class="d-block tamañoBanner" alt="banner ejersicio mujer">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>The <span style="color: red;">Power</span> of Love</h1>
+          <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
+            en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
+          </h3>
         </div>
-
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-
-
-
-  
-
-    <footer class=" bg-dark text-light text-center">
-      <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" id="contactanos" alt="logo" style="max-width: 10em" />
-
-      <!-- texto  -->
-      <p>Seguinos en las redes!!</p>
-      <!-- iconos -->
-      <div class="d-flex justify-content-center">
-        <!-- instagram -->
-
-        <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-instagram fa-2x"></i>
-        </a>
-        <!-- facebook -->
-        <a href="#" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-facebook fa-2x"></i>
-        </a>
-        <!-- twitter -->
-        <a href="#" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-twitter fa-2x"></i>
-        </a>
       </div>
 
-      <!-- disclaimer -->
-      <p class="m-0 pb-4">
-        Copyright (c) 2022 Power of love. Autor de este documento: Prati
-        Cecilia.- Rosario - Argentina
-      </p>
-      </footer>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+
+
+
+  <footer class=" bg-dark text-light text-center">
+    <!-- logo -->
+    <img src="./img/LOGO-GYM_BLANCO.png"  class="img-fluid" alt="logo" style="max-width: 10em" />
+
+    <!-- texto  -->
+    <p>Seguinos en las redes!!</p>
+    <!-- iconos -->
+    <div class="d-flex justify-content-center">
+      <!-- instagram -->
+
+      <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+        class="d-flex justify-content-center align-items-center m-2">
+        <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
+      </a>
+      <!-- facebook -->
+      <a href="#" target="_blank"
+        class="d-flex justify-content-center align-items-center m-2">
+        <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
+
+      </a>
+      <!-- twitter -->
+      <a href="#" target="_blank"
+        class="d-flex justify-content-center align-items-center m-2">
+        <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
+      </a>
+    </div>
+
+    <!-- disclaimer -->
+    <p class="m-0 pb-4">
+      Copyright (c) 2022 Power of love. Autor de este documento: Prati
+      Cecilia.- Rosario - Argentina
+    </p>
+  </footer>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
