--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -21,7 +21,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <!-- favicon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon" />
 
     <!-- Normalize -->
@@ -93,9 +92,9 @@
             </div>
         </div>
 
-        <footer class=" bg-dark text-light text-center">
+        <footer class="bg-dark text-light text-center">
             <!-- logo -->
-            <img src="./img/LOGO-GYM_BLANCO.png"  alt="logo" style="max-width: 10em" />
+            <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
             <!-- texto  -->
             <p>Seguinos en las redes!!</p>
@@ -104,18 +103,17 @@
                 <!-- instagram -->
 
                 <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-                    class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                    <i class="fa fa-instagram fa-2x"></i>
+                    class="d-flex justify-content-center align-items-center m-2">
+                    <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
                 </a>
                 <!-- facebook -->
-                <a href="#" target="_blank"
-                    class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                    <i class="fa fa-facebook fa-2x"></i>
+                <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+                    <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
+
                 </a>
                 <!-- twitter -->
-                <a href="#" target="_blank"
-                    class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                    <i class="fa fa-twitter fa-2x"></i>
+                <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+                    <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
                 </a>
             </div>
 
@@ -126,9 +124,7 @@
             </p>
         </footer>
     </main>
-</body>
-
-
+    <script src="./js/bootstrap.js"></script>
 
 </body>
 
