--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -18,9 +18,6 @@
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="img/logo.ico" />
-
-  <!-- favicon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!--Style bootstraps-->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!-- Estilos locales -->
@@ -90,7 +87,7 @@
           <h2 class="text-white text-center">Body Pump</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/body_pump.jpg" class="img-fluid" "  alt="ejersicio" width="350" />
+            <img src="./img/body_pump.jpg" class="img-fluid" "  alt=" ejersicio" width="350" />
           </div>
         </div>
         <div>
@@ -103,10 +100,9 @@
         </div>
       </div>
     </section>
-
     <footer class="bg-dark text-light text-center">
       <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" alt="logo" style="max-width: 10em" />
+      <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
       <!-- texto  -->
       <p>Seguinos en las redes!!</p>
@@ -115,18 +111,17 @@
         <!-- instagram -->
 
         <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-instagram fa-2x"></i>
+          class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
         </a>
         <!-- facebook -->
-        <a href="#" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-facebook fa-2x"></i>
+        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
+
         </a>
         <!-- twitter -->
-        <a href="#" target="_blank"
-          class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-twitter fa-2x"></i>
+        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
         </a>
       </div>
 
@@ -137,10 +132,6 @@
       </p>
     </footer>
   </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.js"></script>
 </body>
-
 </html>
