--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -109,14 +109,12 @@
               </div>
             </div>
           </form>
-          <!--  Form inputs-->
         </div>
-        <!--  /Container of forms in contact us -->
       </div>
     </div>
     <footer class="bg-dark text-light text-center">
       <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" alt="logo" style="max-width: 10em" />
+      <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
       <!-- texto  -->
       <p>Seguinos en las redes!!</p>
@@ -124,16 +122,18 @@
       <div class="d-flex justify-content-center">
         <!-- instagram -->
 
-        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-instagram fa-2x"></i>
+        <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+          class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
         </a>
         <!-- facebook -->
-        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-facebook fa-2x"></i>
+        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
+
         </a>
         <!-- twitter -->
-        <a href="#" class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-          <i class="fa fa-twitter fa-2x"></i>
+        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+          <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
         </a>
       </div>
 
@@ -144,10 +144,7 @@
       </p>
     </footer>
   </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.js"></script>
 </body>
 
 </html>
