--- a/WEB/Quienes_somos.html
+++ b/WEB/Quienes_somos.html
@@ -9,19 +9,12 @@
     <meta name="author" content="Cecilia Prati" />
     <meta name="tags" content="" />
 
-    <!-- favicon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon" />
-
     <!-- titulo -->
     <title>The Power of Love</title>
-
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="img/logo.ico">
-
     <!-- Normalize -->
     <link rel="stylesheet" href="css/normalize.css" />
-
     <!--Estilos bootstraps-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <!-- Estilos locales -->
@@ -88,9 +81,9 @@
         </div>
     </div>
 
-    <footer class=" bg-dark text-light text-center">
+    <footer class="bg-dark text-light text-center">
         <!-- logo -->
-        <img src="./img/LOGO-GYM_BLANCO.png" alt="logo" style="max-width: 10em" />
+        <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
         <!-- texto  -->
         <p>Seguinos en las redes!!</p>
@@ -99,18 +92,17 @@
             <!-- instagram -->
 
             <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-                class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                <i class="fa fa-instagram fa-2x"></i>
+                class="d-flex justify-content-center align-items-center m-2">
+                <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
             </a>
             <!-- facebook -->
-            <a href="#" target="_blank"
-                class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                <i class="fa fa-facebook fa-2x"></i>
+            <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+                <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
+
             </a>
             <!-- twitter -->
-            <a href="#" target="_blank"
-                class="card d-flex justify-content-center align-items-center m-2 rounded-circle contenedorIcono">
-                <i class="fa fa-twitter fa-2x"></i>
+            <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
+                <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
             </a>
         </div>
 
@@ -121,9 +113,7 @@
         </p>
     </footer>
 </body>
+<script src="./js/bootstrap.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
 
 </html>
