--- a/WEB/index.html
+++ b/WEB/index.html
@@ -110,14 +110,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
-
-
-
-
-  <footer class=" bg-dark text-light text-center">
+  <footer class="bg-dark text-light text-center">
     <!-- logo -->
-    <img src="./img/LOGO-GYM_BLANCO.png"  class="img-fluid" alt="logo" style="max-width: 10em" />
+    <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
     <!-- texto  -->
     <p>Seguinos en las redes!!</p>
@@ -130,14 +125,12 @@
         <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
       </a>
       <!-- facebook -->
-      <a href="#" target="_blank"
-        class="d-flex justify-content-center align-items-center m-2">
+      <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
         <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
 
       </a>
       <!-- twitter -->
-      <a href="#" target="_blank"
-        class="d-flex justify-content-center align-items-center m-2">
+      <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
         <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
       </a>
     </div>
@@ -150,7 +143,6 @@
   </footer>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="./js/bootstrap.js"></script>
 
 </html>
