--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -70,24 +70,22 @@
         </div>
 
 
-
-        <div class="py-2">
-
+        <div class="py-2 my-4-tablet">
             <div class="d-flex flex-wrap justify-content-center ">
                 <div>
-                    <img src="img/galeria_1.jpg" class="img-fluid m-1" alt="imagen" width="350">
+                    <img src="img/galeria_1.jpg" class="img-fluid mx-1 my-4-tablet" alt="imagen" width="350">
                 </div>
                 <div>
-                    <img src="img/galeria_2.jpg" class="img-fluid m-1 " alt="imagen" width="350">
+                    <img src="img/galeria_2.jpg" class="img-fluid mx-1 my-4-tablet  " alt="imagen" width="350">
                 </div>
             </div>
 
             <div class="d-flex flex-wrap justify-content-center ">
                 <div>
-                    <img src="img/galeria_3.jpg" class="img-fluid m-1" alt="imagen" width="350">
+                    <img src="img/galeria_3.jpg" class="img-fluid mx-1 my-4-tablet " alt="imagen" width="350">
                 </div>
                 <div>
-                    <img src="img/galeria_4.jpg" class="img-fluid m-1 " alt="imagen" width="350">
+                    <img src="img/galeria_4.jpg" class="img-fluid mx-1 my-4-tablet  " alt="imagen" width="350">
                 </div>
             </div>
         </div>
