--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- contenedor -->
-    <section class="py-5">
+    <section class="py-5 my-4-tablet">
       <div class="d-flex justify-content-center flex-wrap">
         <div>
           <!--Titulo -->
