--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -43,7 +43,7 @@
                 <a class="nav-link " aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" hrehtml">Contacto</a>
+                <a class="nav-link" href="contactanos.html">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
@@ -87,7 +87,7 @@
           <h2 class="text-white text-center">Body Pump</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/body_pump.jpg" class="img-fluid" "  alt=" ejersicio" width="350" />
+            <img src="./img/body_pump.jpg" class="img-fluid" alt=" ejersicio" width="350" />
           </div>
         </div>
         <div>
@@ -134,4 +134,5 @@
   </main>
   <script src="./js/bootstrap.js"></script>
 </body>
+
 </html>
