--- a/WEB/index.html
+++ b/WEB/index.html
@@ -53,6 +53,9 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./contactanos.html">Contacto</a>
             </li>
             <li class="nav-item">
@@ -61,9 +64,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./actividades.html">Actividades</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
-            </li>
+
           </ul>
         </div>
       </div>
@@ -82,7 +83,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/portada_3.jpg" class="d-block tamañoBanner" alt="banner ejersicio">
+        <img src="img/portadaimagen.jpg" class="d-block tamañoBanner" alt="banner ejersicio">
         <div class="carousel-caption d-none d-md-block">
           <h1>The <span style="color: red;">Power</span> of Love</h1>
           <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
@@ -91,12 +92,25 @@
         </div>
       </div>
       <div class="carousel-item ">
-        <img src="img/portada_2.jpg" class="d-block tamañoBanner" alt="banner ejersicio mujer">
+        <img src="img/portada_2.jpg" class="d-block tamañoBanner" alt="banner ejercicio mujer">
         <div class="carousel-caption d-none d-md-block">
           <h1>The <span style="color: red;">Power</span> of Love</h1>
           <h3>Un espacio nuevo y diferente ubicado en barrio Mártin de la ciudad de Rosario, especializado
             en la prestación de servicios destinados al logro de tu bienestar integral, el que vos merecés.
           </h3>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col"> <img src="img/PLAN_1.png" alt="">
+    
+          </div>
+          <div class="col"> <img src="img/PLAN_2.png" alt="">
+     
+          </div>
+          <div class="col">
+        <h3>el mejor plan para vos</h3>
+          </div>
         </div>
       </div>
 
