--- a/WEB/actividades.html
+++ b/WEB/actividades.html
@@ -2,26 +2,26 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="estilos.css" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="estilos.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- titulo -->
   <title lang="en">Actividades</title>
 
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/logo.ico" />
+  <link rel="icon" type="image/x-icon" href="img/logo.ico">
   <!--Style bootstraps-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <!-- Estilos locales -->
-  <link rel="stylesheet" type="text/css" href="css/Style.css" />
+  <link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
           <h2 class="text-white text-center">Spinning</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/spining.jpg" class="img-fluid" alt="ejersicio" width="350" />
+            <img src="./img/spining.jpg" class="img-fluid" alt="ejersicio" width="350">
           </div>
         </div>
         <div>
@@ -76,7 +76,7 @@
           <h2 class="text-white text-center">Funcional</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/funcional.jpg" class="img-fluid" alt="ejersicio" width="350" />
+            <img src="./img/funcional.jpg" class="img-fluid" alt="ejersicio" width="350">
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
           <h2 class="text-white text-center">Body Pump</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/body_pump.jpg" class="img-fluid" alt=" ejersicio" width="350" />
+            <img src="./img/body_pump.jpg" class="img-fluid" alt=" ejersicio" width="350">
           </div>
         </div>
         <div>
@@ -95,14 +95,14 @@
           <h2 class="text-white text-center">Fit Combat</h2>
           <!--  Imagen -->
           <div class="imageContainer">
-            <img src="./img/fit_combat.jpg" class=" img-fluid" alt="ejersicio" width="350" />
+            <img src="./img/fit_combat.jpg" class=" img-fluid" alt="ejersicio" width="350">
           </div>
         </div>
       </div>
     </section>
     <footer class="bg-dark text-light text-center">
       <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
+      <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em">
 
       <!-- texto  -->
       <p>Seguinos en las redes!!</p>
