--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -21,13 +21,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 
     <!-- Normalize -->
     <link rel="stylesheet" href="css/normalize.css">
 
     <!--Style bootstraps-->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
     <!-- custon style -->
     <link rel="stylesheet" href="css/Style.css">
@@ -52,7 +52,7 @@
                                 <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" hrefhtml">Contacto</a>
+                                <a class="nav-link" href="./contactanos.html"">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="./Galeria.html">Galeria</a>
@@ -93,7 +93,7 @@
 
         <footer class="bg-dark text-light text-center">
             <!-- logo -->
-            <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
+            <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em">
 
             <!-- texto  -->
             <p>Seguinos en las redes!!</p>
