--- a/WEB/Galeria.html
+++ b/WEB/Galeria.html
@@ -52,7 +52,7 @@
                                 <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contactanos.html"">Contacto</a>
+                                <a class="nav-link" href="./contactanos.html">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="./Galeria.html">Galeria</a>
