--- a/WEB/Quienes_somos.html
+++ b/WEB/Quienes_somos.html
@@ -2,30 +2,30 @@
 <html lang="es-ES">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="Cecilia Prati" />
-    <meta name="tags" content="" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Cecilia Prati">
+    <meta name="tags" content="">
 
     <!-- titulo -->
     <title>The Power of Love</title>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="img/logo.ico">
     <!-- Normalize -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css">
     <!--Estilos bootstraps-->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!-- Estilos locales -->
-    <link rel="stylesheet" type="text/css" href="./css/Style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/Style.css">
     <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
     <!-- custon style -->
-    <link rel="stylesheet" href="css/Style.css" />
+    <link rel="stylesheet" href="css/Style.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
     <div class="d-flex justify-content-center align-content-center flex-wrap p-5 Fondo">
         <!-- imagen -->
         <div class="d-flex justify-content-center">
-            <img class="img-fluid" src="img/nosotros.jpg" style="max-width: 95%" alt="nosotros" />
+            <img class="img-fluid" src="img/nosotros.jpg" style="max-width: 95%" alt="nosotros">
         </div>
         <!-- texto -->
         <div class="descripcionQuieneso text-center">
@@ -83,7 +83,7 @@
 
     <footer class="bg-dark text-light text-center">
         <!-- logo -->
-        <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
+        <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em">
 
         <!-- texto  -->
         <p>Seguinos en las redes!!</p>
@@ -112,8 +112,8 @@
             Cecilia.- Rosario - Argentina
         </p>
     </footer>
+    <script src="./js/bootstrap.js"></script>
 </body>
-<script src="./js/bootstrap.js"></script>
 
 
 </html>
