--- a/WEB/index.html
+++ b/WEB/index.html
@@ -2,16 +2,16 @@
 <html lang="es-ES">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="" />
-  <meta name="author" content="Cecilia Prati" />
-  <meta name="tags" content="" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Cecilia Prati">
+  <meta name="tags" content="">
 
   <!-- favicon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 
   <!-- titulo -->
   <title>The Power of Love</title>
@@ -20,19 +20,19 @@
   <link rel="icon" type="image/x-icon" href="img/logo.ico">
 
   <!-- Normalize -->
-  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/normalize.css">
 
   <!--Estilos bootstraps-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <!-- Estilos locales -->
-  <link rel="stylesheet" type="text/css" href="./css/Style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/Style.css">
   <!-- font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
   <!-- custon style -->
-  <link rel="stylesheet" href="css/Style.css" />
+  <link rel="stylesheet" href="css/Style.css">
 </head>
 
 <body>
@@ -103,13 +103,13 @@
       <div class="container">
         <div class="row">
           <div class="col"> <img src="img/PLAN_1.png" alt="">
-    
+
           </div>
           <div class="col"> <img src="img/PLAN_2.png" alt="">
-     
+
           </div>
           <div class="col">
-        <h3>el mejor plan para vos</h3>
+            <h3>el mejor plan para vos</h3>
           </div>
         </div>
       </div>
@@ -126,7 +126,7 @@
   </div>
   <footer class="bg-dark text-light text-center">
     <!-- logo -->
-    <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
+    <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em">
 
     <!-- texto  -->
     <p>Seguinos en las redes!!</p>
@@ -155,8 +155,8 @@
       Cecilia.- Rosario - Argentina
     </p>
   </footer>
+  <script src="./js/bootstrap.js"></script>
 </body>
 
-<script src="./js/bootstrap.js"></script>
 
 </html>
