--- a/WEB/contactanos.html
+++ b/WEB/contactanos.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="estilos.css" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Power of love esun gimnasio con más de 25 años de experiencia en el mercado. Originada en el barrio de Palermo, Buenos Aires">
+  <meta name="keywords" content="gimnasio, Gym, Fitness">
+
   <link rel="stylesheet" href="galeria.html" />
   <!-- titulo -->
   <title lang="en">Contactanos</title>
@@ -43,10 +47,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./contactanos.html">Contacto</a>
+                <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contactanos.html">Contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Galeria.html">Galeria</a>
@@ -54,15 +61,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="./actividades.html">Actividades</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./Quienes_somos.html">Nosotros</a>
-              </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </div>
-
     <div id="contactanosFondo">
       <div class="d-flex justify-content-center flex-wrap-reverse my-5">
         <!--  Container of forms in contact us -->
@@ -113,30 +117,75 @@
       </div>
     </div>
     <footer class="bg-dark text-light text-center">
-      <!-- logo -->
-      <img src="./img/LOGO-GYM_BLANCO.png" class="img-fluid" alt="logo" style="max-width: 10em" />
 
-      <!-- texto  -->
-      <p>Seguinos en las redes!!</p>
+      <form class="form-group pt-5">
+  
+        <div class="text-left ">
+          <h4 htmlFor="Email">Suscribite a nuestro newsletter!!</h4>
+          <div class=" m-2">
+            <input name="Email" type="email" class="form-control-md mr-2 p-2"placeholder="Escribe tu email"
+              required />
+            <button class="btn btn-secondary p-2">Suscribirme!</button>
+          </div>
+        </div>
+  
+      </form>
+  
+  <div class="d-flex flex-wrap justify-content-around pb-4">
+  
+    <!-- hyperlinks -->
+    <div class="text-start">
+      <div>
+        <a class="text-decoration-none  text-start text-light" href="./actividades.html">Actividades</a>
+      </div>
+      <div>
+        <a class="text-decoration-none  text-start text-light" href="./Quienes_somos.html">Nosotros</a>
+      </div>
+      <div>
+        <a class="text-decoration-none  text-start text-light" href="./contactanos.html">Contacto</a>
+      </div>
+      <div>
+        <a class="text-decoration-none  text-start text-light" href="./Galeria.html">Galeria</a>
+      </div>
+      </div>
+  
+  
+  
       <!-- iconos -->
-      <div class="d-flex justify-content-center">
+      <div class="">
         <!-- instagram -->
-
         <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
-          class="d-flex justify-content-center align-items-center m-2">
-          <img src="img/icono_instagram.png" class='img-fluid' alt="instagram">
+          class="d-flex justify-content-center  text-decoration-none">
+          <div>
+            <img src="img/icono_instagram.png" class='img-fluid' width='24' alt="instagram">
+          </div>
+          <p class="text-light ms-1">
+            instagram
+          </p>
         </a>
         <!-- facebook -->
-        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
-          <img src="img/icono_facebook.png" class='img-fluid' alt="facebook">
-
+        <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+          class="d-flex justify-content-center  text-decoration-none">
+          <div>
+            <img src="img/icono_facebook.png" class='img-fluid' width='24' alt="facebook">
+          </div>
+          <p class="text-light ms-1">
+            facebook
+          </p>
         </a>
         <!-- twitter -->
-        <a href="#" target="_blank" class="d-flex justify-content-center align-items-center m-2">
-          <img src="img/icono_twiter.png" class='img-fluid' alt="twiter">
+        <a href="https://www.instagram.com/universal_gym_funes/?next=%2F" target="_blank"
+          class="d-flex justify-content-center  text-decoration-none">
+          <div>
+            <img src="img/icono_twiter.png" class='img-fluid' width='24' alt="twitter">
+          </div>
+          <p class="text-light ms-1">
+            twitter
+          </p>
         </a>
       </div>
-
+    </div>
+  
       <!-- disclaimer -->
       <p class="m-0 pb-4">
         Copyright (c) 2022 Power of love. Autor de este documento: Prati
